wake-up/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wake-up
  namespace: tedy
  labels:
    app: wake-up
spec:
  strategy:
    type: "Recreate"
  replicas: 1
  selector:
    matchLabels:
      app: wake-up
  template:
    metadata:
      labels:
        app: wake-up
    spec:
      hostNetwork: true
      containers:
        - name: wake-up
          args:
            - "-addr=:6001"
          resources:
            limits:
              cpu: "50m"
              memory: "30M"
          image: ghcr.io/tedyst/wake-on-lan-server-go:latest
          ports:
            - containerPort: 6001
              protocol: TCP
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: arm
        kubernetes.io/hostname: tedy-raspberry
