wake-up/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wake-up
  namespace: tedy
spec:
  selector:
    app: wake-up
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
